# CryoClear

./: .gitignore  CLAUDE.md  CryoClear.dc.html  CryoClear.pptx  LICENSE  Makefile  QBI_2026_A2_CryoClear_Build_Plan.md  README.md  environment.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
backend/: __init__.py  app.py  precompute.py
data/: README.md
docs/: 00_hackathon_context.md  01_idea_cryoclear.md  01_idea_cryotriage.md  02_build_plan.md  03_datasets.md  04_evals.md  05_demo_script.md  06_roles.md  07_runpod_build_plan.md  08_runpod.md  90_c1_vs_a2_deepdive.md  91_ucsf_biochem_ideas.md  92_hackathon_2025_recap_and_ideas.md
eval/: EVALS.md  class_averages.py  compare_classifiers.py  heldout_eval.py  junk_triage_improvement.py  render_overlay.py  run_eval.py  split_cryosegnet_star.py
frontend/: app.js  index.html  style.css
samples/: README.md
scripts/: download_cryoppp.py  run_baseline.py  run_cryosegnet.py  run_topaz.py  setup_cryosegnet.sh  setup_cryosegnet_blackwell.sh  setup_pod.sh  train_classifiers.py  train_cnn.py  train_junk_classifier.py
src/cryoclear/: __init__.py  active_learning.py  class2d.py  cnn_classifier.py  config.py  coords.py  features.py  io_mrc.py  junk_classifier.py  picker.py
src/cryotriage/: __init__.py  active_learning.py  config.py  coords.py  features.py  io_mrc.py  junk_classifier.py  metrics.py  picker.py  stream.py
tests/: test_coords.py  test_features.py  test_junk_classifier.py  test_metrics.py
